--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h1>
-This is the main page of demonkit.github.io
-</h>
+<html>
+  <head>
+    <title>Demonkit's Main Page</title>
+    <meta property="qc:admins" content="5653273035763146714052617" />
+  </head>
+  <body>
+    <h1>
+      This is the main page of demonkit.github.io
+    </h>
+  </body>
+</html>
