--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Demonkit's Main Page</title>
-    <meta property="qc:admins" content="565327303576314671405261771645060454" />
+    <meta property="wb:webmaster" content="4370f64ab7d18e0f" />
   </head>
   <body>
     <h1>
