--- a/all/life/_posts/2014-02-27-first-blog.html
+++ b/all/life/_posts/2014-02-27-first-blog.html
@@ -7,4 +7,9 @@ title: "My first blog"
 
 <p class="publish_date">2013-02-37</p>
 
-<p>我的第一篇博客demon。来自网上的样式，以后修改下。</p>
+<p>
+我的第一篇博客demon。来自网上的样式，以后修改下。我的第一篇博客demon。来自网上的样式，以后修改下。
+我的第一篇博客demon。来自网上的样式，以后修改下。我的第一篇博客demon。来自网上的样式，以后修改下。
+我的第一篇博客demon。来自网上的样式，以后修改下。我的第一篇博客demon。来自网上的样式，以后修改下。
+我的第一篇博客demon。来自网上的样式，以后修改下。我的第一篇博客demon。来自网上的样式，以后修改下。
+</p>
