--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: post-index
-title: SEO最佳建议
-description: "a blog about SEO, SEM, ruby, Linux, Mac and stuff"
-tags: [seo,sem,ruby,mac,linux]
+description: "平凡的世界"
+tags: [python,ml,nlp,linux,math,hadoop,algorithm]
 image:
   feature: abstract-8.jpg
   credit: dargadgetz
